# python-snaptime

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  makefile  pyproject.toml
.github/workflows/: changelog-pr.yml  codacy.yml  publish.yml
python_snaptime/: __init__.py  __version__.py  handlers.py  main.py  models.py  parsers.py
scripts/: test.py
tests/: __init__.py  ruff.toml  test_handlers.py  test_main.py  test_models.py  test_parsers.py
